--- a/docs/templates/agenda_distribute.html
+++ b/docs/templates/agenda_distribute.html
@@ -1,85 +1,116 @@
 {% extends "app_base.html" %}
-
 {% load staticfiles %}
-
 {% load setclass %}
 
 {% block content %}
 
 
-<div class="row">
+    <!-- DOCUMENT VIEW
+    ================================================== -->
 
-  <div class="col-sm-3 sidebar">
-    <h2>Agenda distribution</h2>
-    <ul class="nav nav-sidebar">
+    <div class="col-sm-8 col-md-9 main">
+
+      <div class="top-spacer">
+      </div>
+
       {% for page in pages %}
-        <li id="sidebar_{{page.o}}"><a href="#page{{page.0}}" class="sidebar-heading tltip" data-toggle="tooltip" title="Scroll to this page">
-            Page {{ page.0 }}
-        </li></a>
+        <img src="{{ MEDIA_URL }}{{ page.1 }}" class="zoomable" 
+        id="page{{page.0}}" width=100% 
+        alt="A series of images showing the completed agenda. Accesibility note: Choose the PDF button on the sidebar to view the agenda in PDF format.">
+        <br/>
+        <br/>
       {% endfor %}
-    </ul> 
-             
-    <ul class="nav nav-sidebar">
-      <li>
-      <div>
-        <button type="button" class="btn btn-default zoom-button" id="zoom_in"><span class="glyphicon glyphicon-zoom-in"></span>
-</button>
-        <button type="button" class="btn btn-default zoom-button" id="zoom_out"><span class="glyphicon glyphicon-zoom-out"></span>
-</button>
-      </div>
-    </ul>
-    <ul class="nav nav-sidebar"> 
-      <li><a href={% url 'agenda-edit' meeting_id %}><button type="button" class="btn btn-primary">Make changes</button></a></li>
-      <li><a href={% url 'dashboard' %}><button type="button" class="btn btn-primary">Send later</button></a></li>
-      <li><a href={% url 'agenda-print' meeting_id %}><button type="button" class="btn btn-primary">Download PDF</button></a></li>
-    </ul>
       
-      
-<h2><small>Distribute this agenda by email</small></h2>
-  <form action="" method="POST">
-    {% csrf_token %}
-    <div class="checkbox">
-      <label>
-        <input type="checkbox" name="all_participants" id="all_participants" value="checked"><strong>All participants</strong>
-      </label>
-    </div>
-    {% for participant in participants %}
-      <div class="checkbox">
-        <label>
-          <input type="checkbox" class="individual-checkbox" id="participant{{ participant.id }}" name="participant{{ participant.id }}" value="checked"> {{ participant }}
-        </label>
+      <div class="bottom-spacer">
+      </div>  
+    
+    </div><!-- /.col-sm-8 -->
+
+
+    <!-- RIGHT SIDEBAR
+    ================================================== -->
+    
+    <div class="col-sm-3 col-md-2 toolbar">
+  
+      <h2>Send out agenda</h2>
+      <ul class="nav nav-sidebar">
+        {% for page in pages %}
+          <li id="sidebar_{{page.o}}">
+            <a href="#page{{page.0}}" class="sidebar-heading tltip"
+              data-toggle="tooltip" title="Scroll to this page">
+                Page {{ page.0 }}
+            </a>
+          </li>
+        {% endfor %}
+      </ul> 
+                 
+      <ul class="nav nav-sidebar">
+        <li>
+          <div>
+            <button type="button" class="btn btn-default zoom-button"
+              id="zoom_in">
+                <span class="glyphicon glyphicon-zoom-in"></span>
+            </button>
+            <button type="button" class="btn btn-default zoom-button"
+              id="zoom_out">
+                <span class="glyphicon glyphicon-zoom-out"></span>
+            </button>
+          </div>
+        </li>
+      </ul>
+      <ul class="nav nav-sidebar"> 
+        <li>
+          <a href={% url 'agenda-edit' meeting_id %}>
+            <button type="button" class="btn btn-primary">
+              Make changes
+            </button>
+          </a>
+        </li>
+        <li>
+          <a href={% url 'dashboard' %}>
+            <button type="button" class="btn btn-primary">
+              Send later
+            </button>
+          </a>
+        </li>
+        <li>
+          <a href={% url 'agenda-print' meeting_id %}>
+            <button type="button" class="btn btn-primary">
+              Download PDF
+            </button>
+          </a>
+        </li>
+      </ul>
+
+      <h2><small>Distribute this agenda by email</small></h2>
+        <form action="" method="POST">
+          {% csrf_token %}
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" name="all_participants" 
+                id="all_participants" value="checked">
+                  <strong>All participants</strong>
+            </label>
+          </div>
+          {% for participant in participants %}
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" class="individual-checkbox"
+                  id="participant{{ participant.id }}" 
+                  name="participant{{ participant.id }}" value="checked"> 
+                    {{ participant }}
+              </label>
+            </div>
+          {% endfor %}
+          <br/>
+          <button type="submit" class="btn btn-primary"
+            name="distribute_button" value="distribute_agenda"
+            data-toggle="button">
+              Distribute
+          </button>
+        </form>
       </div>
-    {% endfor %}
-    <br>
-    <button type="submit" class="btn btn-primary" name="distribute_button" value="distribute_agenda" data-toggle="button">Distribute</button>
-  </form>
-</div>
 
-
-
-  </div><!-- /.col-sm-3 -->
-
-  <div class="col-sm-7 col-sm-offset-4 main">
-
-    <div class="top-spacer">
-    </div>
-    
-    {% for page in pages %}
-      <img src="{{ MEDIA_URL }}{{ page.1 }}" class="zoomable" id="page{{page.0}}" width=100% alt="A series of images showing the completed agenda. Accesibility note: Choose the PDF button on the sidebar to view the agenda in PDF format.">
-      <br/><br/>
-    
-    {% endfor %}
-    
-    
-    <div class="bottom-spacer">
-    </div>  
-
-		
-    </div><!-- /.col-sm-7 -->
-  </div><!-- ./row -->
-
-
+    </div><!-- /.col-sm-3 -->
 
 {% endblock %}
-
-
