--- a/meetings/templates/meeting_list.html
+++ b/meetings/templates/meeting_list.html
@@ -42,7 +42,7 @@
         </tr>
       {% empty %}
         <tr>
-          <td>There are no agendas yet.</td>
+          <td>There are no meetings yet.</td>
         </tr>
       {% endfor%}
     </tbody>
