--- a/tasks/templates/task_add.html
+++ b/tasks/templates/task_add.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="page-header">
-  <h1>{{ page_heading }}</h1>
+  <h1>Add a new task</h1>
 </div>
 
 <div class="col-lg-6">
