--- a/tasks/templates/task_edit.html
+++ b/tasks/templates/task_edit.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="page-header">
-  <h1>{{ page_heading }}</h1>
+  <h1>Edit this task</h1>
 </div>
  
 <div class="well"> 
