--- a/tasks/templates/task_list.html
+++ b/tasks/templates/task_list.html
@@ -4,7 +4,7 @@
 
 
 <div class="page-header">
-  <h1>{{ page_heading }}</h1>
+  <h1>All tasks</h1>
 </div>
 
 <form role="form" action="" method="POST">
