Set up pdf distribution recording and meeting list showing document statuses

--- a/docs/templates/agenda_distribute.html
+++ b/docs/templates/agenda_distribute.html
@@ -27,7 +27,7 @@
     </div><!-- /.col-sm-8 -->
 
 
-    <!-- RIGHT SIDEBAR
+    <!-- TOOLBAR
     ================================================== -->
     
     <div class="col-sm-3 col-md-2 toolbar">
