--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">eConvener</a>
+          <a class="navbar-brand" href={% url 'dashboard' %}>eConvener</a>
 
         </div><!-- /.navbar-header -->
 
