--- a/meetings/templates/meeting_list_current.html
+++ b/meetings/templates/meeting_list_current.html
@@ -160,7 +160,7 @@
         {% endwith %}
       {% empty %}
         <tr>
-          <td>There are no meetings yet.</td>
+          <td>There are no current meetings at the moment.</td>
         </tr>
       {% endfor%}
     </tbody>
