--- a/meetings/templates/meeting_add.html
+++ b/meetings/templates/meeting_add.html
@@ -16,7 +16,7 @@
       <button type="submit" class="btn btn-primary">
         Save meeting details
       </button>
-      <a href={% url 'meeting-list' %}>
+      <a href={% url 'meeting-list-current' %}>
         <button type="button" class="btn btn-default">
           Cancel
         </button>
